change append to text class in js

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         <button type="submit" class="btn">Go!</button>
       </form>
 
-
-      <ul id="result"></ul>
-
+<div class="output">
+  <ul id="result"></ul>
+</div>
 
     </div>
 
