runs function for loop through divisible by 15 condition before 5 and 3, and adds keydown function to disappear previous output when new number entered in field

--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <body>
 
     <div class="container">
+      <div class="jumbotron">
+
+      </div>
 
       <h2>Ping-Pong</h2>
 
@@ -21,9 +24,9 @@
         <button type="submit" class="btn">Go!</button>
       </form>
 
-<div class="output">
-  <ul><span id="result"></span></ul>
-</div>
+      <div class="output">
+        <ul><span id="result"></span></ul>
+      </div>
 
     </div>
 
